--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
+# for Database
 DB_NAME=user_details
 DB_USER=root   
 DB_PASSWORD=Ayush@895
 DB_HOST=localhost       
 DB_PORT=3306 
+
+# for email
